--- a/angular.json
+++ b/angular.json
@@ -3,9 +3,9 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "NgModules": {
-      "root": "projects/NgModules/",
-      "sourceRoot": "projects/NgModules/src",
+    "ng-modules": {
+      "root": "projects/ng-modules/",
+      "sourceRoot": "projects/ng-modules/src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {
@@ -35,17 +35,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/NgModules",
-            "index": "projects/NgModules/src/index.html",
-            "main": "projects/NgModules/src/main.ts",
-            "polyfills": "projects/NgModules/src/polyfills.ts",
-            "tsConfig": "projects/NgModules/tsconfig.app.json",
+            "outputPath": "dist/ng-modules",
+            "index": "projects/ng-modules/src/index.html",
+            "main": "projects/ng-modules/src/main.ts",
+            "polyfills": "projects/ng-modules/src/polyfills.ts",
+            "tsConfig": "projects/ng-modules/tsconfig.app.json",
             "assets": [
-              "projects/NgModules/src/favicon.ico",
-              "projects/NgModules/src/assets"
+              "projects/ng-modules/src/favicon.ico",
+              "projects/ng-modules/src/assets"
             ],
             "styles": [
-              "projects/NgModules/src/styles.css"
+              "projects/ng-modules/src/styles.css"
             ],
             "scripts": []
           },
@@ -53,8 +53,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "projects/NgModules/src/environments/environment.ts",
-                  "with": "projects/NgModules/src/environments/environment.prod.ts"
+                  "replace": "projects/ng-modules/src/environments/environment.ts",
+                  "with": "projects/ng-modules/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -79,34 +79,34 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "NgModules:build"
+            "browserTarget": "ng-modules:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "NgModules:build:production"
+              "browserTarget": "ng-modules:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "NgModules:build"
+            "browserTarget": "ng-modules:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/NgModules/src/test.ts",
-            "polyfills": "projects/NgModules/src/polyfills.ts",
-            "tsConfig": "projects/NgModules/tsconfig.spec.json",
-            "karmaConfig": "projects/NgModules/karma.conf.js",
+            "main": "projects/ng-modules/src/test.ts",
+            "polyfills": "projects/ng-modules/src/polyfills.ts",
+            "tsConfig": "projects/ng-modules/tsconfig.spec.json",
+            "karmaConfig": "projects/ng-modules/karma.conf.js",
             "styles": [
-              "projects/NgModules/src/styles.css"
+              "projects/ng-modules/src/styles.css"
             ],
             "scripts": [],
             "assets": [
-              "projects/NgModules/src/favicon.ico",
-              "projects/NgModules/src/assets"
+              "projects/ng-modules/src/favicon.ico",
+              "projects/ng-modules/src/assets"
             ]
           }
         },
@@ -114,8 +114,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/NgModules/tsconfig.app.json",
-              "projects/NgModules/tsconfig.spec.json"
+              "projects/ng-modules/tsconfig.app.json",
+              "projects/ng-modules/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -124,9 +124,9 @@
         }
       }
     },
-    "LazyLoading": {
-      "root": "projects/LazyLoading/",
-      "sourceRoot": "projects/LazyLoading/src",
+    "lazy-loading": {
+      "root": "projects/lazy-loading/",
+      "sourceRoot": "projects/lazy-loading/src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {},
@@ -134,17 +134,17 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/LazyLoading",
-            "index": "projects/LazyLoading/src/index.html",
-            "main": "projects/LazyLoading/src/main.ts",
-            "polyfills": "projects/LazyLoading/src/polyfills.ts",
-            "tsConfig": "projects/LazyLoading/tsconfig.app.json",
+            "outputPath": "dist/lazy-loading",
+            "index": "projects/lazy-loading/src/index.html",
+            "main": "projects/lazy-loading/src/main.ts",
+            "polyfills": "projects/lazy-loading/src/polyfills.ts",
+            "tsConfig": "projects/lazy-loading/tsconfig.app.json",
             "assets": [
-              "projects/LazyLoading/src/favicon.ico",
-              "projects/LazyLoading/src/assets"
+              "projects/lazy-loading/src/favicon.ico",
+              "projects/lazy-loading/src/assets"
             ],
             "styles": [
-              "projects/LazyLoading/src/styles.css"
+              "projects/lazy-loading/src/styles.css"
             ],
             "scripts": []
           },
@@ -152,8 +152,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "projects/LazyLoading/src/environments/environment.ts",
-                  "with": "projects/LazyLoading/src/environments/environment.prod.ts"
+                  "replace": "projects/lazy-loading/src/environments/environment.ts",
+                  "with": "projects/lazy-loading/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -178,34 +178,34 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "LazyLoading:build"
+            "browserTarget": "lazy-loading:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "LazyLoading:build:production"
+              "browserTarget": "lazy-loading:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "LazyLoading:build"
+            "browserTarget": "lazy-loading:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/LazyLoading/src/test.ts",
-            "polyfills": "projects/LazyLoading/src/polyfills.ts",
-            "tsConfig": "projects/LazyLoading/tsconfig.spec.json",
-            "karmaConfig": "projects/LazyLoading/karma.conf.js",
+            "main": "projects/lazy-loading/src/test.ts",
+            "polyfills": "projects/lazy-loading/src/polyfills.ts",
+            "tsConfig": "projects/lazy-loading/tsconfig.spec.json",
+            "karmaConfig": "projects/lazy-loading/karma.conf.js",
             "styles": [
-              "projects/LazyLoading/src/styles.css"
+              "projects/lazy-loading/src/styles.css"
             ],
             "scripts": [],
             "assets": [
-              "projects/LazyLoading/src/favicon.ico",
-              "projects/LazyLoading/src/assets"
+              "projects/lazy-loading/src/favicon.ico",
+              "projects/lazy-loading/src/assets"
             ]
           }
         },
@@ -213,8 +213,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/LazyLoading/tsconfig.app.json",
-              "projects/LazyLoading/tsconfig.spec.json"
+              "projects/lazy-loading/tsconfig.app.json",
+              "projects/lazy-loading/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -223,7 +223,6 @@
         }
       }
     }
-
   },
-  "defaultProject": "NgModules"
+  "defaultProject": "ng-module"
 }
